Metadata/objects/Product__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>Stores the wide variety of products. To handle &quot;ANY&quot; product easily, the product catalog is formed of 3 tiers. This forms tier 1 of the product catalog.</description>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <summarizedField>Stock_Item__c.Available_Quantity__c</summarizedField>
        <summaryForeignKey>Stock_Item__c.Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It will have description of IT Product</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatched_Quantity__c</fullName>
        <label>Dispatched Quantity</label>
        <summarizedField>Stock_Item__c.Dispatched_Quantity__c</summarizedField>
        <summaryForeignKey>Stock_Item__c.Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Effective_Period__c</fullName>
        <formula>SUBSTITUTE(text(Valid_From_Date__c), &apos;-&apos;, &apos;/&apos;) + &quot; -- &quot; + SUBSTITUTE(text(Valid_To_Date__c), &apos;-&apos;, &apos;/&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Rate_Plans__c</fullName>
        <label>No. of Rate Plans</label>
        <summaryForeignKey>Product_Rate_Plan__c.Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>It will have the product code value</description>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>This will  have the Family Names Of Product</description>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(TODAY() &gt;= Valid_From_Date__c &amp;&amp; (TODAY() &lt;= Valid_To_Date__c || ISBLANK(Valid_To_Date__c)), &quot;Active&quot;, IF(Valid_From_Date__c &gt; TODAY(), &quot;Future&quot; , &quot;Expired&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From_Date__c</fullName>
        <description>This will have Valid From Date of Product</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_Date__c</fullName>
        <description>This will have the Valid To Date of the Product</description>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Invoice IT Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Valid_From_Date__c</columns>
        <columns>Valid_To_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Invoice IT Products</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice IT Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>